# Tnega

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_PRODUCTION.md  REFACTOR_SUMMARY.md  RUN.md  alembic.ini  csv_to_xlsx.py  docker-compose.yml  main.py  merge_csv.py  pyproject.toml  pyrightconfig.json  run.sh  start.sh  tweets.json  tweets.xlsx  tweets_thread.json
.github/: copilot-instructions.md
app/: main.py
app/api/: router.py
app/core/: config.py  database.py  logger.py  redis.py
app/models/: analysis.py  base.py  schemas.py
app/services/: task_service.py
app/tasks/: analysis.py  celery_app.py  collection.py  twitter_client.py
data/collections/: agent_20251101_132856.csv
data/test_output/: test_export.csv
docker/: Dockerfile  entrypoint.sh
docs/: IMPLEMENTATION_SUMMARY.md  SETUP.md  api_key_setup.md  crawler.md  export_guide.md  models.md  storage.md  topic_crawler_api.md  twitterapi.md  x_crawl_api.md
docs/agent/: AGENT_DESIGN.md  README.md  SYSTEM_PROMPT.md  TOOL_REFERENCE.md  USAGE_EXAMPLES.md
examples/: __init__.py  demo_text_export.py  export_demo.py  quick_start.py  test_collect_discussions.py  test_csv_export.py
migrations/: env.py
scripts/: backfill_parade_2025_ar.py  crawl_china_parade_93.py  request_thread.py  requst.py  requst_tweet.py
src/agent/: agent.py  agent_runner.py  collector_tool.py  export.py  models.py  prompt_loader.py  search_rule.md
tests/: __init__.py  test_agent.py  test_integration.py  test_models.py  test_storage.py  test_storage_mock.py  test_topic_crawler.py
todo/: SHORT_TERM_TODO.md
(+13 files in other folders)
