[project]
name = "tnega"
version = "0.2.0"
description = "基于 FastAPI + Redis 的社交内容分析服务"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-ai>=1.7.0",
    "loguru>=0.7.0",
    "pytest>=8.0.0",
    "pandas>=2.2.0",
    "tweepy>=4.16.0",
    "aiohttp>=3.9.0",
    "async-lru>=2.0.0",
    "oauthlib>=3.2.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.11.0",
    "httpx>=0.28.1",
    "aiofiles>=25.1.0",
    "openpyxl>=3.1.5",
    # FastAPI + 异步框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    # 数据库
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    # Redis 缓存
    "redis>=5.2.0",
    "hiredis>=3.1.0",
    # Celery 异步任务队列
    "celery>=5.4.0",
    "celery[redis]>=5.4.0",
    # 监控和日志
    "prometheus-client>=0.21.0",
    "python-multipart>=0.0.17",
    # 验证和序列化
    "email-validator>=2.2.0",
]
